--- a/space-tourism/src/scss/_header.scss
+++ b/space-tourism/src/scss/_header.scss
@@ -1,20 +1,21 @@
 .nav__list {
   position: fixed;
   background-color: $dark-color;
-  opacity: 0.7;
+  opacity: 0.8;
+  backdrop-filter: blur(2rem);
   top: 0%;
   right: 0;
   list-style: none;
   width: 60%;
   height: 100%;
-  padding: 6rem 2rem;
+  padding: 16rem 5rem;
   .nav__link {
     color: white;
     text-decoration: none;
   }
 
   .nav__item {
-    padding: 1.3rem 0;
+    padding: 3rem 0;
   }
 
   transform: translateX(100%);
