--- a/space-tourism/src/scss/_style.scss
+++ b/space-tourism/src/scss/_style.scss
@@ -52,7 +52,7 @@ h5 {
 
 .nav__text,
 a {
-  font-size: 1.6rem;
+  font-size: 2.5rem;
   font-family: "Barlow Condensed", sans-serif;
   letter-spacing: 4px;
   color: white;
@@ -72,4 +72,11 @@ p {
 .row {
   display: flex;
   justify-content: space-between;
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
