heading position absolute

--- a/space-tourism/src/scss/_home.scss
+++ b/space-tourism/src/scss/_home.scss
@@ -2,7 +2,7 @@
   background-image: url(../image/home/background-home-mobile.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 90vh;
+  min-height: 100vh;
   text-align: center;
   line-height: 1.5;
   h1 {
@@ -13,7 +13,7 @@
     line-height: 1.6;
   }
   h5 {
-    padding-top: 4rem;
+    padding-top: 12vh;
     font-size: 2rem;
   }
 }
