--- a/space-tourism/src/scss/_destination.scss
+++ b/space-tourism/src/scss/_destination.scss
@@ -3,7 +3,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  min-height: 90vh;
+  min-height: 100vh;
   text-align: center;
   img {
     width: 250px;
@@ -16,7 +16,7 @@
   }
 }
 .des__heading {
-  padding: 2rem 0 3rem 0;
+  padding: 10vh 0 3rem 0;
   color: grey;
   letter-spacing: 2px;
   text-transform: uppercase;
