--- a/space-tourism/src/scss/_header.scss
+++ b/space-tourism/src/scss/_header.scss
@@ -22,10 +22,12 @@
   transition: all 0.6s ease-in-out;
 }
 header {
+  position: absolute;
+  width: 100%;
+  top: 0;
   min-height: 10vh;
   display: flex;
   align-items: center;
-  background-color: $dark-color;
   .hamburger {
     z-index: 100;
     align-self: center;
