--- a/space-tourism/src/scss/_crew.scss
+++ b/space-tourism/src/scss/_crew.scss
@@ -10,7 +10,8 @@
   text-align: center;
 
   img {
-    width: 55%;
+    width: auto;
+    height: 40vh;
     display: flex;
     margin: 0 auto;
   }
@@ -25,7 +26,6 @@
   }
 
   h5 {
-    padding-top: 2rem;
     font-size: 2rem;
     color: white;
     opacity: 0.6;
@@ -42,4 +42,36 @@
 
 .crew__heading {
   text-align: center;
+}
+
+.crewNav {
+  display: flex;
+  justify-content: center;
+  padding: 2rem 0;
+}
+
+.crewNav__list {
+  list-style: none;
+  max-width: 150px;
+  min-height: 5vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.crewNav__style {
+  width: 12px;
+  height: 12px;
+  background-color: rgba(255, 255, 255, 0.508);
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.crewNav__active {
+  background-color: white;
+}
+
+.crewNav__style:hover {
+  background-color: rgba(255, 255, 255, 0.734);
 }
